--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Справочник по Лавкрафту</title>
 </head>
 <body>
     <header class="head">
-
+        <img src="" alt="" class="icon-img">
     </header>
     <div class="middle">
 
