Добавлены два блока

--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="stylesheet" href="css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Справочник по Лавкрафту</title>
+    <script src="js/app.js" defer></script>
+
 </head>
+
 <body>
-    <header class="head">
-        <img src="" alt="" class="icon-img">
+
+    <header class="main-header">
+        <div class="layers">
+            <div class="layer__header">
+                <div class="layers__caption">Welcome to Parallax</div>
+                <div class="layers__title">Fairy Forest</div>
+            </div>
+            <div class="layer layers__base" style="background-image: url(img/Alu-1.png);"></div>
+            <div class="layer layers__title" style="background-image: url(img/Alu-1.png);"></div>
+            <div class="layer layers__front" style="background-image: url(img/Alu-1.png);"></div>
+        </div>
     </header>
-    <div class="middle">
 
-    </div>
-    <div class="contact-info">
+    <article class="main-article" style="background-image: url(img/Alu-1.png);">
+        <div class="main-article__content">
+            <h2 class="main-article__header">To Be Continued</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum eligendi iusto, rem libero beatae velit, aperiam expedita id consequuntur, 
+                eveniet adipisci esse soluta! Sunt soluta earum distinctio quod dolorum. Consectetur, placeat.</p>
+        </div>
+        <div class="copy">© Saite Quietomi</div>
+    </article>
 
-    </div>
 </body>
 </html>
